# champy

./: .gitignore  README.md  pyproject.toml
champy/: ElectronicStructure.py  ElectronicStructureTZ.py  Hamiltonian.py  HamiltonianPartition.py  MajoranaHamiltonian.py  MajoranaPair.py  PauliHamiltonian.py  __init__.py  factorization.py  fermion2qubit.py  rotation.py
champy/tests/: conftest.py  test_ElectronicStructure.py  test_ElectronicStructureTZ.py  test_MajoranaPair.py  test_PauliHamiltonian.py  test_factorization.py  test_fermion2qubit.py
examples/: h2o.py  random_hamiltonian.py
tests/: conftest.py  test_ElectronicStructure.py  test_PauliHamiltonian.py  test_factorization.py  test_fermion2qubit.py  test_rotation.py
