[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "champy"
version = "0.0.1"
authors = [{ name = "Jakob Günther", email = "jmg@math.ku.dk" }]
description = "Chemistry Hamiltonian tool-box in Python"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy>=1.26.0",
    "pyscf>=2.4.0",
    "numba>=0.60.0",
    "scipy>=1.14.0",
    "openfermion",
    "qiskit"
]

[project.urls]


[project.optional-dependencies]
test = [
    "black",
    "flake8",
    "isort",
    "mypy >= 0.990",
    "pytest >= 7.4.0",
    "pytest-cov",
]

[tool.mypy]
ignore_missing_imports = true

[tool.pytest.ini_options]
filterwarnings = [
    "ignore:.*is deprecated:DeprecationWarning",
    "ignore:.*will be deprecated:PendingDeprecationWarning",
]
